// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Warning > should render correctly 1`] = `
<DocumentFragment>
  <div
    class="govuk-warning-text"
  >
    <span
      className="govuk-visually-hidden"
    >
      !
    </span>
    <strong
      class="govuk-warning-text__text"
    >
      <span
        class="govuk-warning-text__assistive"
      >
        Warning
      </span>
      Test Warning Message
    </strong>
  </div>
</DocumentFragment>
`;

exports[`Warning > should render correctly with optional props 1`] = `
<DocumentFragment>
  <div
    class="govuk-warning-text"
  >
    <span
      className="govuk-visually-hidden"
    >
      ?
    </span>
    <strong
      class="govuk-warning-text__text"
    >
      <span
        class="govuk-warning-text__assistive"
      >
        WARNING!!!
      </span>
      Test Warning Message
    </strong>
  </div>
</DocumentFragment>
`;
